PromQL: fix passthrough alias exclusion